Add main header markup

--- a/index.html
+++ b/index.html
@@ -44,6 +44,33 @@
             </ul>
         </nav>
     </aside>
+    <main class="grid">
+        <header class="grid">
+            <section class="top grid">
+                <div class="search flex">
+                    <img src="resources/icons/search.svg" alt="" class="header-icon">
+                    <input type="text" class="search-input" placeholder="Enter your query...">
+                </div>
+                <div class="user flex">
+                    <img src="resources/icons/alert.svg" alt="" class="header-icon">
+                    <img src="resources/icons/user.svg" alt="" class="profile-img">
+                    <p class="user-name">John Doe</p>
+                </div>
+            </section>
+            <section class="bottom grid">
+                <div class="user grid">
+                    <img src="resources/icons/user.svg" alt="" class="profile-img">
+                    <p class="welcome">Hey there,</p>
+                    <p class="username">John Doe (@DudeByDefault)</p>
+                </div>
+                <ul class="quick-actions grid">
+                    <li class="quick-action">New</li>
+                    <li class="quick-action">Upload</li>
+                    <li class="quick-action">Share</li>
+                </ul>
+            </section>
+        </header>
+    </main>
 </body>
 
 </html>
