--- a/index.html
+++ b/index.html
@@ -70,6 +70,145 @@
                 </ul>
             </section>
         </header>
+        <div class="content grid">
+            <section class="projects grid">
+                <h2 class="projects-title">Projects</h2>
+                <div class="grid">
+                    <div class="project grid">
+                        <h3 class="title">Project One</h3>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ipsam
+                            asperiores, ex sequi repellat laboriosam illo maxime officiis adipisci molestias, eveniet in
+                            et
+                            libero nemo consequatur. Recusandae libero corrupti quis.
+                        </p>
+                        <ul class="actions">
+                            <li class="action">A</li>
+                            <li class="action">B</li>
+                            <li class="action">C</li>
+                        </ul>
+                    </div>
+                    <div class="project grid">
+                        <h3 class="title">Project Two</h3>
+                        <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia,
+                            assumenda. Ea
+                            consectetur dolores sunt placeat excepturi, suscipit deserunt a iure voluptate saepe. Fuga
+                            consequuntur beatae a, facere sequi rerum non?</p>
+                        <ul class="actions">
+                            <li class="action">A</li>
+                            <li class="action">B</li>
+                            <li class="action">C</li>
+                        </ul>
+                    </div>
+                    <div class="project grid">
+                        <h3 class="title">Project Three</h3>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit soluta
+                            dicta
+                            magni
+                            similique, exercitationem voluptatum libero, autem aliquid illo sint magnam, dolorem
+                            deserunt
+                            nesciunt excepturi consequuntur ipsa ipsum ut? Aliquam!</p>
+                        <ul class="actions">
+                            <li class="action">A</li>
+                            <li class="action">B</li>
+                            <li class="action">C</li>
+                        </ul>
+                    </div>
+                    <div class="project grid">
+                        <h3 class="title">Project Four</h3>
+                        <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore eos
+                            eligendi
+                            suscipit, molestiae aliquam eaque, minima tempore quibusdam neque exercitationem ducimus
+                            deserunt
+                            tenetur dolore qui. Minus, inventore? Doloremque, cupiditate quisquam.</p>
+                        <ul class="actions">
+                            <li class="action">A</li>
+                            <li class="action">B</li>
+                            <li class="action">C</li>
+                        </ul>
+                    </div>
+                    <div class="project grid">
+                        <h3 class="title">Project Five</h3>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla earum
+                            commodi
+                            veniam exercitationem vitae, facere possimus ipsa aut nam blanditiis eum ad dolor incidunt
+                            corrupti
+                            amet magnam a fugit ullam.</p>
+                        <ul class="actions">
+                            <li class="action">A</li>
+                            <li class="action">B</li>
+                            <li class="action">C</li>
+                        </ul>
+                    </div>
+                    <div class="project grid">
+                        <h3 class="title">Project Six</h3>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
+                            dignissimos
+                            ratione et facilis nihil libero soluta excepturi eius ullam magni. Molestias adipisci quos
+                            architecto eum, incidunt voluptatem ipsa explicabo labore.</p>
+                        <ul class="actions">
+                            <li class="action">A</li>
+                            <li class="action">B</li>
+                            <li class="action">C</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="announcements">
+                <h2 class="announcements-title">Announcements</h2>
+                <div class="grid">
+                    <div class="announcement">
+                        <h3 class="title">Announcement One</h3>
+                        <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, animi
+                            quasi
+                            ipsam natus voluptates sequi est dolorem officiis non aliquid, facere ex tempora, rerum
+                            totam?
+                            Atque
+                            quibusdam eos accusamus vero?</p>
+                    </div>
+                    <div class="announcement">
+                        <h3 class="title">Announcement Two</h3>
+                        <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim delectus
+                            molestiae
+                            harum tempore praesentium, quibusdam ut dolore. Amet tempore ducimus accusamus nemo tenetur,
+                            accusantium, aperiam, sed atque explicabo inventore quia?</p>
+                    </div>
+                    <div class="announcement">
+                        <h3 class="title">Announcement Three</h3>
+                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint maxime
+                            impedit
+                            ipsa unde sapiente atque vitae, nemo officiis, accusantium quo quibusdam eos quaerat
+                            mollitia
+                            eum
+                            distinctio iusto harum asperiores. Accusamus.</p>
+                    </div>
+                </div>
+            </section>
+            <section class="trending">
+                <h2 class="trending-title">Trending</h2>
+                <div class="grid">
+                    <div class="trend">
+                        <img src="resources/icons/user.svg" alt="" class="profile-img">
+                        <h3 class="handle">@user-one</h3>
+                        <p class="description">Some original text</p>
+                    </div>
+                    <div class="trend">
+                        <img src="resources/icons/user.svg" alt="" class="profile-img">
+                        <h3 class="handle">@user-two</h3>
+                        <p class="description">More original text</p>
+                    </div>
+                    <div class="trend">
+                        <img src="resources/icons/user.svg" alt="" class="profile-img">
+                        <h3 class="handle">@user-three</h3>
+                        <p class="description">Extra original text</p>
+                    </div>
+                    <div class="trend">
+                        <img src="resources/icons/user.svg" alt="" class="profile-img">
+                        <h3 class="handle">@user-four</h3>
+                        <p class="description">Super original text</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 
