Change project ABC to accurate icons

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         </header>
         <div class="content grid">
             <section class="projects grid">
-                <h2 class="projects-title">Projects</h2>
-                <div class="grid">
+                <h2 class="projects-title">Your Projects</h2>
+                <div class="container grid">
                     <div class="project grid">
                         <h3 class="title">Project One</h3>
                         <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum ipsam
@@ -81,10 +81,10 @@
                             et
                             libero nemo consequatur. Recusandae libero corrupti quis.
                         </p>
-                        <ul class="actions">
-                            <li class="action">A</li>
-                            <li class="action">B</li>
-                            <li class="action">C</li>
+                        <ul class="actions flex">
+                            <li class="action"><img src="resources/icons/github.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/link.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/maximize.svg" alt=""></li>
                         </ul>
                     </div>
                     <div class="project grid">
@@ -93,10 +93,10 @@
                             assumenda. Ea
                             consectetur dolores sunt placeat excepturi, suscipit deserunt a iure voluptate saepe. Fuga
                             consequuntur beatae a, facere sequi rerum non?</p>
-                        <ul class="actions">
-                            <li class="action">A</li>
-                            <li class="action">B</li>
-                            <li class="action">C</li>
+                        <ul class="actions flex">
+                            <li class="action"><img src="resources/icons/github.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/link.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/maximize.svg" alt=""></li>
                         </ul>
                     </div>
                     <div class="project grid">
@@ -107,10 +107,10 @@
                             similique, exercitationem voluptatum libero, autem aliquid illo sint magnam, dolorem
                             deserunt
                             nesciunt excepturi consequuntur ipsa ipsum ut? Aliquam!</p>
-                        <ul class="actions">
-                            <li class="action">A</li>
-                            <li class="action">B</li>
-                            <li class="action">C</li>
+                        <ul class="actions flex">
+                            <li class="action"><img src="resources/icons/github.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/link.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/maximize.svg" alt=""></li>
                         </ul>
                     </div>
                     <div class="project grid">
@@ -120,10 +120,10 @@
                             suscipit, molestiae aliquam eaque, minima tempore quibusdam neque exercitationem ducimus
                             deserunt
                             tenetur dolore qui. Minus, inventore? Doloremque, cupiditate quisquam.</p>
-                        <ul class="actions">
-                            <li class="action">A</li>
-                            <li class="action">B</li>
-                            <li class="action">C</li>
+                        <ul class="actions flex">
+                            <li class="action"><img src="resources/icons/github.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/link.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/maximize.svg" alt=""></li>
                         </ul>
                     </div>
                     <div class="project grid">
@@ -133,10 +133,10 @@
                             veniam exercitationem vitae, facere possimus ipsa aut nam blanditiis eum ad dolor incidunt
                             corrupti
                             amet magnam a fugit ullam.</p>
-                        <ul class="actions">
-                            <li class="action">A</li>
-                            <li class="action">B</li>
-                            <li class="action">C</li>
+                        <ul class="actions flex">
+                            <li class="action"><img src="resources/icons/github.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/link.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/maximize.svg" alt=""></li>
                         </ul>
                     </div>
                     <div class="project grid">
@@ -145,10 +145,10 @@
                             dignissimos
                             ratione et facilis nihil libero soluta excepturi eius ullam magni. Molestias adipisci quos
                             architecto eum, incidunt voluptatem ipsa explicabo labore.</p>
-                        <ul class="actions">
-                            <li class="action">A</li>
-                            <li class="action">B</li>
-                            <li class="action">C</li>
+                        <ul class="actions flex">
+                            <li class="action"><img src="resources/icons/github.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/link.svg" alt=""></li>
+                            <li class="action"><img src="resources/icons/maximize.svg" alt=""></li>
                         </ul>
                     </div>
                 </div>
