Refactor classes for markup consistency

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </header>
         <div class="content grid">
             <section class="projects grid">
-                <h2 class="projects-title">Your Projects</h2>
+                <h2 class="title">Your Projects</h2>
                 <div class="container grid">
                     <div class="project grid">
                         <h3 class="title">Project One</h3>
@@ -153,10 +153,10 @@
                     </div>
                 </div>
             </section>
-            <section class="announcements">
-                <h2 class="announcements-title">Announcements</h2>
-                <div class="grid">
-                    <div class="announcement">
+            <section class="announcements grid">
+                <h2 class="title">Announcements</h2>
+                <div class="container grid">
+                    <div class="announcement grid">
                         <h3 class="title">Announcement One</h3>
                         <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, animi
                             quasi
@@ -165,14 +165,14 @@
                             Atque
                             quibusdam eos accusamus vero?</p>
                     </div>
-                    <div class="announcement">
+                    <div class="announcement grid">
                         <h3 class="title">Announcement Two</h3>
                         <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim delectus
                             molestiae
                             harum tempore praesentium, quibusdam ut dolore. Amet tempore ducimus accusamus nemo tenetur,
                             accusantium, aperiam, sed atque explicabo inventore quia?</p>
                     </div>
-                    <div class="announcement">
+                    <div class="announcement grid">
                         <h3 class="title">Announcement Three</h3>
                         <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint maxime
                             impedit
@@ -183,25 +183,25 @@
                     </div>
                 </div>
             </section>
-            <section class="trending">
+            <section class="trending grid">
                 <h2 class="trending-title">Trending</h2>
-                <div class="grid">
-                    <div class="trend">
+                <div class="container grid">
+                    <div class="trend grid">
                         <img src="resources/icons/user.svg" alt="" class="profile-img">
                         <h3 class="handle">@user-one</h3>
                         <p class="description">Some original text</p>
                     </div>
-                    <div class="trend">
+                    <div class="trend grid">
                         <img src="resources/icons/user.svg" alt="" class="profile-img">
                         <h3 class="handle">@user-two</h3>
                         <p class="description">More original text</p>
                     </div>
-                    <div class="trend">
+                    <div class="trend grid">
                         <img src="resources/icons/user.svg" alt="" class="profile-img">
                         <h3 class="handle">@user-three</h3>
                         <p class="description">Extra original text</p>
                     </div>
-                    <div class="trend">
+                    <div class="trend grid">
                         <img src="resources/icons/user.svg" alt="" class="profile-img">
                         <h3 class="handle">@user-four</h3>
                         <p class="description">Super original text</p>
