Refactor trending title class for consistency

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
             </section>
             <section class="trending grid">
-                <h2 class="trending-title">Trending</h2>
+                <h2 class="title">Trending</h2>
                 <div class="container grid">
                     <div class="trend grid">
                         <img src="resources/icons/user.svg" alt="" class="profile-img">
